Made some changes

--- a/web-kilimo/assets/css/style.css
+++ b/web-kilimo/assets/css/style.css
@@ -434,6 +434,14 @@ section {
   transform: scale(1.2);
 }
 
+#sugeco, #abood, #qlicue {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  height: 120px;
+}
+
 .partners img {
   transition: all 0.4s ease-in-out;
 }
@@ -626,6 +634,10 @@ section {
 .team .member .social i {
   font-size: 18px;
   margin: 0 2px;
+}
+
+.mobileOnly {
+  visibility: hidden;
 }
 
 /*--------------------------------------------------------------
