--- a/smart_Shamba/assets/css/main.css
+++ b/smart_Shamba/assets/css/main.css
@@ -2,9 +2,8 @@
 # General
 ===================================================*/
 body {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+  padding: 0px;
+  margin: 0px;
   overflow-x: hidden;
   font-family: "Nanum Gothic", sans-serif;
 }
