--- a/Amazing/assets/css/index.css
+++ b/Amazing/assets/css/index.css
@@ -7,12 +7,14 @@ body {
 }
 
 .header {
-	background-image: linear-gradient(to left, rgba(255, 193, 7, 0.7), rgba(255, 193, 7, 0.8) );
+	/* background-image: linear-gradient(to left, rgba(255, 193, 7, 0.7), rgba(255, 193, 7, 0.8) ); */
+	/* background: #343a40; */
 }
 
 p#lead {
 	font-family: 'Exo', sans-serif;
 	font-size: 18px;
+	opacity: 0.9;
 }
 
 #signin, #signup {
@@ -23,14 +25,23 @@ p#lead {
 .fa-users, .fa-search, .fa-cart-plus {
 	cursor: pointer;
 	transition-duration: 0.7s;
+	color: #f8f9fa;
 }
 
 .fa-users:hover, .fa-search:hover , .fa-cart-plus:hover {
-	color: black;
+	color: #d3d3d3;
 }
 
-.fa-cart-plus:hover {
-	padding: 0px 5px;
+
+.fa-cart-plus {
+	animation: sideToside 1s infinite alternate;
+	transition: all 1s;
+}
+
+@keyframes sideToside {
+	0% {transform: translateX(0px);}
+
+	100% {transform: translateX(10px); color: #d3d3d3;}
 }
 
 .navbar .nav-link {
@@ -61,21 +72,21 @@ p#lead {
 }
 
 .carousel-image-1 {
-	background-image: url('../img/image2.jpg');
+	background-image: url('../img/new.jpg');
 	background-size: cover;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 }
 
 .carousel-image-2 {
-	background: url('../img/image3.png');
+	background: url('../img/new-3.jpg');
 	background-size: cover;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 }
 
 .carousel-image-3 {
-	background: url('../img/image3.jpg');
+	background: url('../img/Product.png');
 	background-size: cover;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
