--- a/Amazing/assets/css/index.css
+++ b/Amazing/assets/css/index.css
@@ -12,8 +12,8 @@ body {
 }
 
 p#lead {
-	font-family: 'Exo', sans-serif;
-	font-size: 18px;
+	font-family: 'Abel', sans-serif;
+	font-size: 20px;
 	opacity: 0.9;
 }
 
@@ -45,9 +45,9 @@ p#lead {
 }
 
 .navbar .nav-link {
-	font-size: 16px;
+	font-size: 19px;
 	/* text-transform: uppercase; */
-	font-family: 'Exo', sans-serif;
+	font-family: 'Abel', sans-serif;
 	padding-right: 1rem !important;
 	padding-left: 1rem ! important;
 	transition: 0.5s;
@@ -101,33 +101,38 @@ p#lead {
 	opacity: 0.7;
 }
 
-img {
+#new img {
 	transition: all 1s;
 	overflow: hidden;
 }
 
-img:hover {
+#new img:hover {
 	transform: scale(1.1);
+	transition: all 1s;
 }
 
 
-img#transform {
+/* img#transform {
 	transition: all 1s;
 }
 
 img#transform:hover {
 	transform: scale(0.9);
-}
+} */
 
 section#new-arrivals-header {
 	padding-top: 5px;
 	padding-bottom: 20px;
 }
 
+section#best-sellers .card {
+	box-shadow: 0px 4px 4px 0px #d3d3d3;
+}
+
 /*Logo*/
 #logo {
 	transition: all 1s;
-	font-family: 'Exo', sans-serif;
+	font-family: 'Ubuntu', sans-serif;
 }
 
 #logo:hover {
@@ -204,6 +209,8 @@ hr {
 
 .card {
 	border: none;
+	min-height: 450px; 
+	max-height: 450px; 
 }
 
 .card-img-top {
@@ -219,22 +226,21 @@ hr {
 }
 
 #card-1, #card-2, #card-3, #card-4, #card-5, #card-6, #card-7, #card-8 {
-	width: 260px;
-	height: 350px;
+	min-height: 450px; 
 	overflow: hidden;
-	box-shadow: 0px 2px 2px 0px #d3d3d3;
+	box-shadow: 0px 4px 4px 0px #d3d3d3;
 }
 
 #card-1 img, #card-2 img, #card-3 img, #card-4 img, #card-5 img, #card-6 img, #card-7 img, #card-8 img {
-	width: 260px;
-	height: 250px;
+	/* width: 260px;
+	height: 250px; */
 }
 
 /* Responsive */
 
 /* Media screen of 1200 and above */
 
-@media (max-width: 1024px) {
+/* @media (max-width: 1024px) {
 	#card-1, #card-2, #card-3, #card-4, #card-5, #card-6, #card-7, #card-8 {
 		width: 225px;
 		height: 350px;
@@ -244,7 +250,7 @@ hr {
 		width: 225px;
 		height: 250px;
 	}
-}
+} */
 
 /* Media Screen of 768px and less*/
 @media (max-width: 768px) {
@@ -280,8 +286,9 @@ hr {
     	color: #fff;
     	font-size: 16px;
 	}
+
 	
-	#card-1, #card-2, #card-3, #card-4, #card-5, #card-6, #card-7, #card-8 {
+	/* #card-1, #card-2, #card-3, #card-4, #card-5, #card-6, #card-7, #card-8 {
 		width: 330px;
 		height: 370px;
 	}
@@ -289,9 +296,31 @@ hr {
 	#card-1 img, #card-2 img, #card-3 img, #card-4 img, #card-5 img, #card-6 img, #card-7 img, #card-8 img {
 		width: 330px;
 		height: 400px;
-	}
+	} */
 
 }
+
+/* 
+@media (max-width: 900px) and (min-width: 600px) {
+	#card-3 {
+		margin-top: 35px;
+		margin-bottom: 10px;
+	}
+
+	#card-10 {
+		margin-top: 35px;
+		margin-bottom: 10px;
+	}
+
+	#card-7 {
+		margin-top: 35px;
+	}
+
+	#card-13 {
+		margin-top: 35px;
+		margin-bottom: 10px;
+	}
+} */
 
 
 @media (max-width: 768px) {
@@ -341,11 +370,11 @@ hr {
     	font-size: 8px;
 	}
 	
-	#card-1, #card-2, #card-3, #card-4, #card-5, #card-6, #card-7, #card-8 {
+	/* #card-1, #card-2, #card-3, #card-4, #card-5, #card-6, #card-7, #card-8 {
 		margin: 0 auto;
 		width: 290px;
 	    height: 365px;
-	}
+	} */
 
 	#card-2, #card-3, #card-4, #card-6, #card-7, #card-8 {
 		margin-top: 25px;
@@ -356,10 +385,10 @@ hr {
 	}
 
 	
-	#card-1 img, #card-2 img, #card-3 img, #card-4 img, #card-5 img, #card-6 img, #card-7 img, #card-8 img {
+	/* #card-1 img, #card-2 img, #card-3 img, #card-4 img, #card-5 img, #card-6 img, #card-7 img, #card-8 img {
 		width: 290px;
 		height: 250px;
-	}
+	} */
 
 	#sub, input[type=text], input[type=email] {
 		width: 100%;
