--- a/Amazing/assets/css/index.css
+++ b/Amazing/assets/css/index.css
@@ -1,3 +1,6 @@
+/*===========================================
+# General
+============================================*/
 body {
   overflow-x: hidden;
   margin: 0px;
@@ -6,47 +9,97 @@ body {
   font-family: 'Nanum Gothic', sans-serif;
 }
 
-.header {
-	/* background-image: linear-gradient(to left, rgba(255, 193, 7, 0.7), rgba(255, 193, 7, 0.8) ); */
-	/* background: #343a40; */
+.card {
+	border: none;
+	min-height: 400px; 
+	max-height: 400px; 
 }
 
-p#lead {
+.card-img-top {
+	cursor: pointer;
+}
+
+.btn {
+	transition: 0.8s;
+}
+
+.btn:hover {
+	opacity: 0.9;
+}
+
+/*===========================================
+# Header
+============================================*/
+.header {
+	padding-top: 1.5rem!important;
+	padding-bottom: 1.5rem!important;
+	background: #343a40;
+}
+
+.header #lead {
 	font-family: 'Abel', sans-serif;
 	font-size: 20px;
 	opacity: 0.9;
 }
 
-#signin, #signup {
+.header #signin, .header #signup {
 	text-decoration: none;
 	transition: 0.7s;
 }
 
-.fa-users, .fa-search, .fa-cart-plus {
+.header .fa-users, .header .fa-search, .header.fa-cart-plus {
 	cursor: pointer;
 	transition-duration: 0.7s;
 	color: #f8f9fa;
 }
 
-.fa-users:hover, .fa-search:hover , .fa-cart-plus:hover {
+.header .fa-users:hover, .header .fa-search:hover , .header .fa-cart-plus:hover {
 	color: #d3d3d3;
 }
 
-
-.fa-cart-plus {
+.header .fa-cart-plus {
 	animation: sideToside 1s infinite alternate;
 	transition: all 1s;
 }
 
 @keyframes sideToside {
-	0% {transform: translateX(0px);}
+	0% {transform: translateX(-10px);}
 
-	100% {transform: translateX(10px); color: #d3d3d3;}
+	100% {transform: translateX(5px); color: #ffc107;}
+}
+
+/* Media Screen of 768px and less*/
+@media (max-width: 768px) {
+	.header {
+		padding-top: 1.5rem!important;
+	    padding-bottom: 0rem!important;
+	}
+
+	.header #lead {
+		font-size: 17px;
+		padding-left: 15px;
+		padding-right: 15px;
+	}
+}
+
+/*===========================================
+# Navigation
+============================================*/
+.navbar {
+	background: #343a40;
+}
+
+.navbar #logo {
+	transition: all 1s;
+	font-family: 'Ubuntu', sans-serif;
+}
+
+.navbar #logo:hover {
+	transform: scale(0.8);
 }
 
 .navbar .nav-link {
 	font-size: 19px;
-	/* text-transform: uppercase; */
 	font-family: 'Abel', sans-serif;
 	padding-right: 1rem !important;
 	padding-left: 1rem ! important;
@@ -57,18 +110,59 @@ p#lead {
 	border-left: #444 3px solid;
 }
 
+@media (max-width: 768px) {
+	.navbar #logo {
+		margin-left: 3px;
+	}
+}
+
+/* Media Screen of 690px and less*/
+@media (max-width: 690px) {
+
+    .navbar .fa-users, .navbar .fa-search, .navbar .fa-cart-plus {
+		font-size: 14px;
+		cursor: pointer;
+	    transition-duration: 0.7s;
+	    color: #f8f9fa;
+	}
+	
+	.navbar .fa-users, .navbar .fa-search, .navbar .fa-cart-plus:hover {
+		color: #d3d3d3;
+    }
+
+    .navbar #signin, .navbar #signup {
+		font-size: 14px;
+		text-decoration: none;
+	}
+
+	.navbar .fa-cart-plus {
+		animation: sideToside 1s infinite alternate;
+		transition: all 1s;
+	}
+	
+	@keyframes sideToside {
+		0% {transform: translateX(-10px);}
+	
+		100% {transform: translateX(1px); color: #ffc107;}
+	}
+    
+}
+
+/*===========================================
+# Showcase Carousel
+============================================*/
+.carousel-item {
+	height: 410px;
+	position: relative!important;
+}
+
 .dark-overlay {
 	top: 0px;
 	left: 0px;
 	height: 410px;
 	width: 100%;
 	position: absolute;
-	background: rgba(0, 0, 0, 0.6);
-}
-
-.carousel-item {
-	height: 410px;
-	position: relative!important;
+	background: rgba(0, 0, 0, 0.7);
 }
 
 .carousel-image-1 {
@@ -92,13 +186,99 @@ p#lead {
 	background-repeat: no-repeat;
 }
 
+.carousel-caption {
+	margin-bottom: 60px;
+}
+
 .carousel-caption .display-3 {
-	margin-top: -260px;
 	color: #eeeeee;
 }
 
 .carousel-caption .lead {
 	opacity: 0.7;
+}
+
+/* Media Screen of 768px and less*/
+@media (max-width: 768px) {
+	.carousel-caption {
+		margin-bottom: 60px;
+	}
+
+	.carousel-caption .display-3 {
+		font-size: 45px;
+	}	
+
+	.dark-overlay {
+		height: 400px;
+	}
+
+	.carousel-item {
+		height: 400px;
+    }
+
+}
+
+/* Media Screen of 567px and less*/
+@media (max-width: 567px) {
+	.dark-overlay {
+		height: 700px;
+	}
+
+	.carousel-item {
+		height: 700px;
+    }
+
+	.carousel-caption {
+	    margin-bottom: 210px;
+	}
+
+	.carousel-caption .display-3 {
+		margin-bottom: -300px;
+		font-size: 40px;
+		text-align: center;
+	}
+
+	.carousel-caption .lead {
+		font-size: 23px;
+		text-align: center;
+		padding-top: 330px;
+		padding-bottom: 30px;
+	}
+
+	.carousel-caption .btn {
+		font-size: 20px;
+		margin: 0 auto;
+	}
+
+}
+
+/*===========================================
+# New Arrivals
+============================================*/
+#new {
+	background: #f8f9fa;
+}
+
+#new-arrivals-header {
+	padding-top: 5px;
+	padding-bottom: 20px;
+	background: #343a40;
+}
+
+#new-arrivals-header #Bottom {
+	transition: all 1s;
+}
+
+#new-arrivals-header .fa-chevron-circle-down {
+	animation: slideDown 1s infinite alternate;
+	font-size: 40px;
+	margin-top: 6px;
+}
+
+@keyframes slideDown {
+	0% {transform: translateY(0); color: #f8f9fa;}
+
+	100% {transform: translateY(-10px);}
 }
 
 #new img {
@@ -111,51 +291,57 @@ p#lead {
 	transition: all 1s;
 }
 
-
-/* img#transform {
-	transition: all 1s;
-}
-
-img#transform:hover {
-	transform: scale(0.9);
-} */
-
-section#new-arrivals-header {
-	padding-top: 5px;
-	padding-bottom: 20px;
-}
-
-section#best-sellers .card {
+#new #card-1, #new #card-2, #new #card-3, #new #card-4, #new #card-5, #new #card-6, #new #card-7, #new #card-8 {
+	overflow: hidden;
 	box-shadow: 0px 4px 4px 0px #d3d3d3;
 }
 
-/*Logo*/
-#logo {
-	transition: all 1s;
-	font-family: 'Ubuntu', sans-serif;
+/* Media Screen of 567px and less*/
+@media (max-width: 576px) {
+	#card-2, #card-3, #card-4, #card-6, #card-7, #card-8 {
+		margin-top: 25px;
+	}
+
+	#card-9, #card-10, #card-11, #card-12, #card-13, #card-14 {
+		margin-top: 15px;
+	}
 }
 
-#logo:hover {
-	transform: scale(0.8);
+/*===========================================
+# Best Sellers
+============================================*/
+#best-sellers {
+	background: rgba(236, 234, 230, 0.849);
 }
 
-hr {
+#best-sellers .card {
+	box-shadow: 0px 4px 4px 0px #d3d3d3;
+}
+
+/*===========================================
+# Footer
+============================================*/
+footer {
+	background: #343a40;
+}
+
+footer hr {
 	margin: 30px; 
 	background:#ffc107;
 }
 
-#go-top {
+footer #go-top {
 	color: #343a40;
 	opacity: 0.9;
 	transition: all 1s;
 }
 
-#go-top:hover {
+footer #go-top:hover {
 	color: #fff;
 	background: #343a40;
 }
 
-.fa-chevron-circle-up {
+footer .fa-chevron-circle-up {
 	animation: slideUp 1s infinite alternate-reverse;
 	font-size: 40px;
 	margin-top: 8px;
@@ -167,233 +353,38 @@ hr {
 	100% {transform: translateY(0px);}
 }
 
-
-#Bottom {
-	transition: all 1s;
-}
-
-.fa-chevron-circle-down {
-	animation: slideDown 1s infinite alternate;
-	font-size: 40px;
-	margin-top: 6px;
-}
-
-@keyframes slideDown {
-	0% {transform: translateY(0); color: #f8f9fa;}
-
-	100% {transform: translateY(-10px);}
-}
-
-/*FOOTER SOCIAL MEDIA ICONS*/
-
-.fab {
+footer .fab {
 	color: #808080;
 	transition: 0.5s;
 }
 
-.fa-facebook:hover {
+footer .fa-facebook:hover {
 	color: silver;
 	opacity: 0.8;
 }
 
-.fa-twitter:hover {
+footer .fa-twitter:hover {
 	color: silver;
 	opacity: 0.8;
 }
 
-.fa-instagram:hover {
+footer .fa-instagram:hover {
 	color: silver;
 	opacity: 0.8;
 }
 
-
-.card {
-	border: none;
-	min-height: 450px; 
-	max-height: 450px; 
+footer input[type=text], footer input[type=email] {
+	margin-right: 6px;
 }
 
-.card-img-top {
-	cursor: pointer;
-}
-
-.btn {
-	transition: 0.8s;
-}
-
-.btn:hover {
-	opacity: 0.9;
-}
-
-#card-1, #card-2, #card-3, #card-4, #card-5, #card-6, #card-7, #card-8 {
-	min-height: 450px; 
-	overflow: hidden;
-	box-shadow: 0px 4px 4px 0px #d3d3d3;
-}
-
-#card-1 img, #card-2 img, #card-3 img, #card-4 img, #card-5 img, #card-6 img, #card-7 img, #card-8 img {
-	/* width: 260px;
-	height: 250px; */
-}
-
-/* Responsive */
-
-/* Media screen of 1200 and above */
-
-/* @media (max-width: 1024px) {
-	#card-1, #card-2, #card-3, #card-4, #card-5, #card-6, #card-7, #card-8 {
-		width: 225px;
-		height: 350px;
-	}
-	
-	#card-1 img, #card-2 img, #card-3 img, #card-4 img, #card-5 img, #card-6 img, #card-7 img, #card-8 img {
-		width: 225px;
-		height: 250px;
-	}
-} */
-
-/* Media Screen of 768px and less*/
-@media (max-width: 768px) {
-	h1.display-3 {
-		font-size: 38px;
-	}
-
-	p#lead {
-		font-size: 12px;
-		padding-left: 15px;
-		padding-right: 10px;
-	}
-
-	p#text {
-		font-size: 16px;
-		/* padding-left: 15px; */
-		/* padding-right: 10px; */
-	}
-
-
-	.dark-overlay {
-		height: 400px;
-	}
-
-	.carousel-item {
-	height: 400px;
-    }
-
-    #color-1 {
-    	color: #fff;
-    }
-    #color-2 {
-    	color: #fff;
-    	font-size: 16px;
-	}
-
-	
-	/* #card-1, #card-2, #card-3, #card-4, #card-5, #card-6, #card-7, #card-8 {
-		width: 330px;
-		height: 370px;
-	}
-
-	#card-1 img, #card-2 img, #card-3 img, #card-4 img, #card-5 img, #card-6 img, #card-7 img, #card-8 img {
-		width: 330px;
-		height: 400px;
-	} */
-
-}
-
-/* 
-@media (max-width: 900px) and (min-width: 600px) {
-	#card-3 {
-		margin-top: 35px;
-		margin-bottom: 10px;
-	}
-
-	#card-10 {
-		margin-top: 35px;
-		margin-bottom: 10px;
-	}
-
-	#card-7 {
-		margin-top: 35px;
-	}
-
-	#card-13 {
-		margin-top: 35px;
-		margin-bottom: 10px;
-	}
-} */
-
-
-@media (max-width: 768px) {
-	img:hover {
-		transform: scale(1.1);
-	}
-	
-}
-
-/* Media Screen of 450px and less*/
-
+/* Media Screen of 567px and less*/
 @media (max-width: 576px) {
-	.carousel-caption .display-3 {
-		margin-top: -310px;
-		font-size: 40px;
-		text-align: center;
+	footer input[type=text], footer input[type=email] {
+		margin-right: 0px;
+		width: 95%;
 	}
 
-	.carousel-caption .lead {
-		font-size: 20px;
-		text-align: center;
-		padding-top: 20px;
-		padding-bottom: 10px;
+	footer #subscribe {
+		width: 94.5%;
 	}
-
-	.carousel-caption .btn {
-		font-size: 20px;
-		margin: 0 auto;
-	}
-
-	p#lead {
-		font-size: 10px;
-		padding-left: 5px;
-		padding-right: 10px;
-	}
- 
-    .fa-users, .fa-search, .fa-cart-plus {
-	    font-size: 8px;
-    }
-
-
-    .fa-cart-plus:hover {
-	    padding: 0px 1px;
-    }
-
-    #signin, #signup {
-    	font-size: 8px;
-	}
-	
-	/* #card-1, #card-2, #card-3, #card-4, #card-5, #card-6, #card-7, #card-8 {
-		margin: 0 auto;
-		width: 290px;
-	    height: 365px;
-	} */
-
-	#card-2, #card-3, #card-4, #card-6, #card-7, #card-8 {
-		margin-top: 25px;
-	}
-
-	#card-9, #card-10, #card-11, #card-12, #card-13, #card-14 {
-		margin-top: 15px;
-	}
-
-	
-	/* #card-1 img, #card-2 img, #card-3 img, #card-4 img, #card-5 img, #card-6 img, #card-7 img, #card-8 img {
-		width: 290px;
-		height: 250px;
-	} */
-
-	#sub, input[type=text], input[type=email] {
-		width: 100%;
-		margin-right: 6px;
-	}
-    
-    
 }
