--- a/Amazing/assets/css/index.css
+++ b/Amazing/assets/css/index.css
@@ -6,13 +6,11 @@ body {
   margin: 0px;
   padding: 0px;
   background: #f8f9fa;
-  font-family: 'Nanum Gothic', sans-serif;
+  font-family: 'Comfortaa', sans-serif;	
 }
 
 .card {
 	border: none;
-	min-height: 400px; 
-	max-height: 400px; 
 }
 
 .card-img-top {
@@ -36,7 +34,7 @@ body {
 	background: #343a40;
 }
 
-.header #lead {
+.header #lead {	
 	font-family: 'Abel', sans-serif;
 	font-size: 20px;
 	opacity: 0.9;
@@ -45,6 +43,8 @@ body {
 .header #signin, .header #signup {
 	text-decoration: none;
 	transition: 0.7s;
+	font-size: 18px;
+	font-family: 'Abel', sans-serif;
 }
 
 .header .fa-users, .header .fa-search, .header.fa-cart-plus {
@@ -89,9 +89,14 @@ body {
 	background: #343a40;
 }
 
+.navbar-brand {
+	font-size: 30px;
+	font-family: 'Dancing Script', cursive;
+	margin-top: -12px;
+}
+
 .navbar #logo {
 	transition: all 1s;
-	font-family: 'Ubuntu', sans-serif;
 }
 
 .navbar #logo:hover {
@@ -192,10 +197,19 @@ body {
 
 .carousel-caption .display-3 {
 	color: #eeeeee;
+	font-family: 'Abel', sans-serif;
+	font-size: 90px;
 }
 
 .carousel-caption .lead {
 	opacity: 0.7;
+	font-family: 'Abel', sans-serif;
+	font-size: 23px;
+}
+
+.carousel-caption .btn {
+	font-size: 18px;
+	font-family: 'Abel', sans-serif;
 }
 
 /* Media Screen of 768px and less*/
@@ -234,7 +248,7 @@ body {
 
 	.carousel-caption .display-3 {
 		margin-bottom: -300px;
-		font-size: 40px;
+		font-size: 60px;
 		text-align: center;
 	}
 
@@ -296,14 +310,16 @@ body {
 	box-shadow: 0px 4px 4px 0px #d3d3d3;
 }
 
+@media (min-width: 600px) and (max-width: 750px) {
+	#new #card-1, #new #card-2, #new #card-4, #new #card-5 {
+		margin-bottom: 25px;
+	}
+}
+
 /* Media Screen of 567px and less*/
 @media (max-width: 576px) {
-	#card-2, #card-3, #card-4, #card-6, #card-7, #card-8 {
-		margin-top: 25px;
-	}
-
-	#card-9, #card-10, #card-11, #card-12, #card-13, #card-14 {
-		margin-top: 15px;
+	#new #card-1, #new #card-2, #new #card-4, #new #card-5 {
+		margin-bottom: 20px;
 	}
 }
 
@@ -316,6 +332,19 @@ body {
 
 #best-sellers .card {
 	box-shadow: 0px 4px 4px 0px #d3d3d3;
+}
+
+@media (min-width: 600px) and (max-width: 750px) {
+	#best-sellers #card-1, #best-sellers #card-2, #best-sellers #card-4, #best-sellers #card-5 {
+		margin-bottom: 25px;
+	}
+}
+
+/* Media Screen of 567px and less*/
+@media (max-width: 576px) {
+	#best-sellers #card-1, #best-sellers #card-2, #best-sellers #card-4,  #best-sellers #card-5 {
+		margin-bottom: 20px;
+	}
 }
 
 /*===========================================
@@ -375,6 +404,17 @@ footer .fa-instagram:hover {
 
 footer input[type=text], footer input[type=email] {
 	margin-right: 6px;
+}
+
+footer h1.display-4 {
+	font-family: 'Abel', sans-serif;	
+}
+
+footer #copy {
+	font-family: 'Abel', sans-serif;
+	font-size: 17px;
+	opacity: 0.5;
+	color: #f8f9fa;
 }
 
 /* Media Screen of 567px and less*/
