--- a/Amazing/assets/css/index.css
+++ b/Amazing/assets/css/index.css
@@ -25,6 +25,34 @@ body {
 	opacity: 0.9;
 }
 
+/* Scrollbar */
+/* width */
+::-webkit-scrollbar {
+	width: 10px;
+}
+
+::-webkit-scrollbar {
+	height: 10px;
+}
+  
+/* Track */
+::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 5px grey; 
+	border-radius: 10px;
+}
+   
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: #ffc107; 
+	border-radius: 10px;
+}
+  
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+	background: #ffc107; 
+}
+  
+
 /*===========================================
 # Header
 ============================================*/
